--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -179,3 +179,10 @@ resume-item-title {
     text-align: center;
     margin-top: 50px;
 }
+/* footer styles */
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
+}
